--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -16,15 +16,50 @@
         <item>Beverage</item>
     </string-array>
     <string-array name="cuisine_array">
-        <item>French</item>
-        <item>Italian </item>
         <item>Chinese</item>
-        <item>Indian</item>
-        <item>Thai</item>
-        <item>Mexican</item>
-        <item>Japanese</item>
-        <item>Spanish</item>
+        <item>French</item>
         <item>Greek</item>
+        <item>Indian</item>
+        <item>Indonesian</item>
+        <item>Italian</item>
+        <item>Japanese</item>
         <item>Lebanese</item>
+        <item>Mexican</item>
+        <item>Spanish</item>
+        <item>Thai</item>
+        <item>Turkish</item>
+    </string-array>
+    <string-array name="language_array">
+        <item>Arabic</item>
+        <item>Azerbaijani</item>
+        <item>Bengali</item>
+        <item>Cantonese</item>
+        <item>Czech</item>
+        <item>Dutch</item>
+        <item>English</item>
+        <item>French</item>
+        <item>German</item>
+        <item>Greek</item>
+        <item>Hindi</item>
+        <item>Hungarian</item>
+        <item>Italian</item>
+        <item>Japanese</item>
+        <item>Javanese</item>
+        <item>Korean</item>
+        <item>Malay</item>
+        <item>Mandarin</item>
+        <item>Persian</item>
+        <item>Polish</item>
+        <item>Portuguese</item>
+        <item>Punjabi</item>
+        <item>Romanian</item>
+        <item>Russian</item>
+        <item>Spanish</item>
+        <item>Swedish</item>
+        <item>Turkish</item>
+        <item>Urdu</item>
+        <item>Ukrainian</item>
+        <item>Vietnamese</item>
+        <item>Wu</item>
     </string-array>
 </resources>
