--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,20 +1,24 @@
 <resources>
     <bool name="landscape">false</bool>
-    <integer name="thumbnail_size">300</integer>
-    <!-- Default screen margins, per the Android Design guidelines. -->
+    <integer name="image_size_px">300</integer>
+    <integer name="max_length_recipe_title">40</integer>
+    <integer name="max_length_servings">2</integer>
+    <integer name="max_length_cook_time">3</integer>
+    <!-- Text sizes. -->
+    <dimen name="edit_recipe_texts">14sp</dimen>
+    <dimen name="spinner_headers">12sp</dimen>
+    <!-- Spaces. -->
+    <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="nav_header_vertical_spacing">8dp</dimen>
-    <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
-
-    <dimen name="text_auto_size_min">10sp</dimen>
-    <dimen name="text_auto_size_max">16sp</dimen>
-
     <dimen name="space_one_unit">8dp</dimen>
     <dimen name="space_two_units">16dp</dimen>
+    <dimen name="empty_frame_outline_thickness">2dp</dimen>
+    <!-- Widget sizes. -->
+    <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="app_bar_height">180dp</dimen>
     <dimen name="nav_header_user_image_size">72dp</dimen>
     <dimen name="nav_header_user_image_corner">36dp</dimen>
     <dimen name="card_height">285dp</dimen>
@@ -23,13 +27,12 @@
     <dimen name="edit_image_size">240dp</dimen>
     <dimen name="card_title_size">16sp</dimen>
     <dimen name="card_detail_size">13sp</dimen>
-    <dimen name="tab_widget_child_width">50dp</dimen>
+    <dimen name="card_button_size">32dp</dimen>
+    <dimen name="card_timer_icon_size">20dp</dimen>
     <dimen name="list_item_height">60dp</dimen>
     <dimen name="list_item_image_size">48dp</dimen>
     <dimen name="list_button_size">48dp</dimen>
-    <dimen name="card_button_size">32dp</dimen>
-    <dimen name="card_timer_icon_size">20dp</dimen>
-    <dimen name="text_size_new_recipe">16sp</dimen>
-    <dimen name="empty_frame_outline_thickness">2dp</dimen>
-    <dimen name="recipe_title_input_width">250dp</dimen>
+    <dimen name="tab_widget_child_width">50dp</dimen>
+    <dimen name="spinner_width">170dp</dimen>
+    <dimen name="recipe_overall_divider_length">200dp</dimen>
 </resources>
