--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -83,11 +83,11 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
-    <!--suppress AndroidDomInspection -->
-    <style name="RecipeEditTexts" parent="Base.V7.Widget.AppCompat.EditText">
-        <item name="android:layout_width">match_parent</item>
+    <style name="SpinnerHeaders">
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:inputType">textCapWords</item>
-        <item name="android:singleLine">true</item>
+        <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">@dimen/spinner_headers</item>
     </style>
 </resources>
