--- a/app/src/main/res/layout/fragment_overall.xml
+++ b/app/src/main/res/layout/fragment_overall.xml
@@ -10,66 +10,92 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <FrameLayout
-            android:id="@+id/frame_empty"
-            android:layout_width="@dimen/edit_image_size"
-            android:layout_height="@dimen/edit_image_size"
+        <LinearLayout
+            android:id="@+id/view_top"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:background="?android:attr/listDivider"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="@dimen/empty_frame_outline_thickness"
-                android:background="@android:color/white" />
-        </FrameLayout>
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="@dimen/edit_image_size"
+                android:layout_height="@dimen/edit_image_size"
+                android:background="?android:attr/listDivider">
 
-        <ImageView
-            android:id="@+id/iv_photo_icon"
-            android:layout_width="@dimen/list_button_size"
-            android:layout_height="@dimen/list_button_size"
-            android:contentDescription="@string/add_a_picture"
-            app:layout_constraintBottom_toBottomOf="@+id/frame_empty"
-            app:layout_constraintEnd_toEndOf="@+id/frame_empty"
-            app:layout_constraintStart_toStartOf="@+id/frame_empty"
-            app:layout_constraintTop_toTopOf="@+id/frame_empty"
-            app:srcCompat="@android:drawable/ic_menu_camera" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/empty_frame_outline_thickness"
+                    android:background="@android:color/white"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_hint_click_to_add"
-            style="@style/TextAppearance.Design.Hint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_one_unit"
-            android:text="@string/click_to_add_a_picture"
-            android:textSize="@dimen/edit_recipe_texts"
-            app:layout_constraintBottom_toBottomOf="@+id/frame_empty"
-            app:layout_constraintEnd_toEndOf="@+id/frame_empty"
-            app:layout_constraintStart_toStartOf="@+id/frame_empty" />
+                <ImageView
+                    android:id="@+id/iv_cam_icon"
+                    android:layout_width="@dimen/list_button_size"
+                    android:layout_height="@dimen/list_button_size"
+                    android:contentDescription="@string/add_a_picture"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@android:drawable/ic_menu_camera" />
 
-        <ImageView
-            android:id="@+id/iv_recipe_picture"
-            android:layout_width="@dimen/edit_image_size"
-            android:layout_height="@dimen/edit_image_size"
-            android:contentDescription="@string/recipe_image_description"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/frame_empty" />
+                <TextView
+                    android:id="@+id/tv_hint_click_to_add"
+                    style="@style/TextAppearance.Design.Hint"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:text="@string/click_to_add_a_picture"
+                    android:textSize="@dimen/edit_recipe_texts"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageButton
-            android:id="@+id/btn_rotate"
-            android:layout_width="@dimen/list_button_size"
-            android:layout_height="@dimen/list_button_size"
-            android:layout_marginStart="@dimen/space_one_unit"
-            android:background="@android:color/transparent"
-            android:contentDescription="@string/rotate_image"
-            android:src="@android:drawable/ic_menu_rotate"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_picture"
-            app:layout_constraintStart_toEndOf="@+id/iv_recipe_picture" />
+                <ImageView
+                    android:id="@+id/iv_recipe_picture"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/empty_frame_outline_thickness"
+                    android:contentDescription="@string/recipe_image_description"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </android.support.constraint.ConstraintLayout>
+
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom">
+
+                <ImageButton
+                    android:id="@+id/btn_rotate"
+                    android:layout_width="@dimen/list_button_size"
+                    android:layout_height="@dimen/list_button_size"
+                    android:layout_marginStart="@dimen/activity_horizontal_margin"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/rotate_image"
+                    android:src="@android:drawable/ic_menu_rotate"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/btn_publish"
+                    android:layout_width="@dimen/list_button_size"
+                    android:layout_height="@dimen/list_button_size"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/upload"
+                    android:src="@android:drawable/ic_menu_upload"
+                    app:layout_constraintBottom_toTopOf="@id/btn_rotate"
+                    app:layout_constraintStart_toStartOf="@+id/btn_rotate" />
+
+            </android.support.constraint.ConstraintLayout>
+        </LinearLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_title"
@@ -81,7 +107,7 @@
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/frame_empty">
+            app:layout_constraintTop_toBottomOf="@+id/view_top">
 
             <EditText
                 android:id="@+id/text_edit_title"
