style: Enter arrays in strings.xml

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,65 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="photo_options">
-        <item>Camera</item>
-        <item>Gallery</item>
+        <item>@string/camera</item>
+        <item>@string/gallery</item>
     </string-array>
     <string-array name="course_array">
-        <item>Appetizer</item>
-        <item>Soup</item>
-        <item>Salad</item>
-        <item>Fish</item>
-        <item>Main course</item>
-        <item>Cheese</item>
-        <item>Nuts</item>
-        <item>Fruit</item>
-        <item>Beverage</item>
+        <item>@string/appetizer</item>
+        <item>@string/soup</item>
+        <item>@string/salad</item>
+        <item>@string/fish</item>
+        <item>@string/main_course</item>
+        <item>@string/cheese</item>
+        <item>@string/nuts</item>
+        <item>@string/fruit</item>
+        <item>@string/beverage</item>
     </string-array>
     <string-array name="cuisine_array">
-        <item>Chinese</item>
-        <item>French</item>
-        <item>Greek</item>
-        <item>Indian</item>
-        <item>Indonesian</item>
-        <item>Italian</item>
-        <item>Japanese</item>
-        <item>Lebanese</item>
-        <item>Mexican</item>
-        <item>Spanish</item>
-        <item>Thai</item>
-        <item>Turkish</item>
+        <item>@string/chinese</item>
+        <item>@string/french</item>
+        <item>@string/greek</item>
+        <item>@string/indian</item>
+        <item>@string/indonesian</item>
+        <item>@string/italian</item>
+        <item>@string/japanese</item>
+        <item>@string/lebanese</item>
+        <item>@string/mexican</item>
+        <item>@string/spanish</item>
+        <item>@string/thai</item>
+        <item>@string/turkish</item>
     </string-array>
     <string-array name="language_array">
-        <item>Arabic</item>
-        <item>Azerbaijani</item>
-        <item>Bengali</item>
-        <item>Cantonese</item>
-        <item>Czech</item>
-        <item>Dutch</item>
-        <item>English</item>
-        <item>French</item>
-        <item>German</item>
-        <item>Greek</item>
-        <item>Hindi</item>
-        <item>Hungarian</item>
-        <item>Italian</item>
-        <item>Japanese</item>
-        <item>Javanese</item>
-        <item>Korean</item>
-        <item>Malay</item>
-        <item>Mandarin</item>
-        <item>Persian</item>
-        <item>Polish</item>
-        <item>Portuguese</item>
-        <item>Punjabi</item>
-        <item>Romanian</item>
-        <item>Russian</item>
-        <item>Spanish</item>
-        <item>Swedish</item>
-        <item>Turkish</item>
-        <item>Urdu</item>
-        <item>Ukrainian</item>
-        <item>Vietnamese</item>
-        <item>Wu</item>
+        <item>@string/arabic</item>
+        <item>@string/azerbaijani</item>
+        <item>@string/bengali</item>
+        <item>@string/cantonese</item>
+        <item>@string/czech</item>
+        <item>@string/dutch</item>
+        <item>@string/english</item>
+        <item>@string/french</item>
+        <item>@string/german</item>
+        <item>@string/greek</item>
+        <item>@string/hindi</item>
+        <item>@string/hungarian</item>
+        <item>@string/italian</item>
+        <item>@string/japanese</item>
+        <item>@string/javanese</item>
+        <item>@string/korean</item>
+        <item>@string/malay</item>
+        <item>@string/mandarin</item>
+        <item>@string/persian</item>
+        <item>@string/polish</item>
+        <item>@string/portuguese</item>
+        <item>@string/punjabi</item>
+        <item>@string/romanian</item>
+        <item>@string/russian</item>
+        <item>@string/spanish</item>
+        <item>@string/swedish</item>
+        <item>@string/turkish</item>
+        <item>@string/urdu</item>
+        <item>@string/ukrainian</item>
+        <item>@string/vietnamese</item>
     </string-array>
 </resources>
