feat: Save all data from recipe overall edit to local database

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,6 +13,7 @@
         <item>@string/cheese</item>
         <item>@string/nuts</item>
         <item>@string/fruit</item>
+        <item>@string/dessert</item>
         <item>@string/beverage</item>
     </string-array>
     <string-array name="cuisine_array">
