--- a/app/src/main/res/layout/item_recipe_card.xml
+++ b/app/src/main/res/layout/item_recipe_card.xml
@@ -22,6 +22,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_card_recipe_image" />
 
+        <ImageView
+            android:id="@+id/iv_clock"
+            android:layout_width="@dimen/card_timer_icon_size"
+            android:layout_height="@dimen/card_timer_icon_size"
+            android:layout_marginBottom="@dimen/space_one_unit"
+            android:layout_marginStart="@dimen/space_one_unit"
+            android:contentDescription="@string/timer_icon"
+            android:src="@android:drawable/ic_lock_idle_alarm"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_card_cook_time"
+            style="@style/CardCookTime"
+            android:layout_marginBottom="@dimen/space_one_unit"
+            android:layout_marginStart="@dimen/space_half_unit"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/iv_clock" />
+
         <RatingBar
             android:id="@+id/ratingBar"
             style="?android:attr/ratingBarStyleSmall"
@@ -33,24 +52,6 @@
             android:stepSize="0.1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
-
-        <ImageView
-            android:id="@+id/iv_clock"
-            android:layout_width="@dimen/card_timer_icon_size"
-            android:layout_height="@dimen/card_timer_icon_size"
-            android:layout_marginStart="@dimen/space_one_unit"
-            android:contentDescription="@string/timer_icon"
-            android:src="@android:drawable/ic_lock_idle_alarm"
-            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
-
-        <TextView
-            style="@style/CardCookTime"
-            android:layout_marginEnd="@dimen/space_one_unit"
-            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
-            app:layout_constraintStart_toEndOf="@+id/iv_clock"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
 
     </android.support.constraint.ConstraintLayout>
 
