--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,7 +53,11 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">@dimen/card_height</item>
         <item name="android:gravity">center</item>
-        <item name="android:layout_margin">@dimen/space_one_unit</item>
+        <item name="android:layout_marginStart">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginEnd">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginTop">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_marginBottom">@dimen/activity_vertical_margin</item>
+        <item name="cardCornerRadius">@dimen/space_one_unit</item>
     </style>
 
     <style name="CardTitle">
@@ -72,15 +76,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:textSize">@dimen/card_detail_size</item>
-        <item name="android:layout_marginStart">@dimen/space_one_unit</item>
+        <item name="android:layout_marginStart">@dimen/space_half_unit</item>
         <item name="android:layout_marginEnd">@dimen/space_one_unit</item>
-    </style>
-
-    <style name="ButtonLink">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:textColor">@color/colorAccent</item>
-        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="SpinnerHeaders">
