--- a/app/src/main/res/layout/activity_recipe_edit.xml
+++ b/app/src/main/res/layout/activity_recipe_edit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +13,9 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary" />
+        android:background="@color/tab_background"
+        app:tabSelectedTextColor="@color/tab_text"
+        app:tabTextColor="@color/tab_text" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
