--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <bool name="landscape">true</bool>
     <dimen name="card_image_height">235dp</dimen>
+    <dimen name="app_bar_height">300dp</dimen>
 </resources>
