--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#3e2723</color>
     <color name="colorAccent">#ffc400</color>
     <color name="tab_text">#FFFFFF</color>
+    <color name="btn_text">#FFFFFF</color>
     <color name="tab_background">#b71c1c</color>
     <color name="nav_gradient_start">#ff80ab</color>
     <color name="nav_gradient_center">#b71c1c</color>
@@ -13,4 +14,7 @@
     <color name="image_tint_gradient_start">#00ffffff</color>
     <color name="image_tint_gradient_center">#19000000</color>
     <color name="image_tint_gradient_end">#64000000</color>
+    <color name="label_text_color">#000000</color>
+    <color name="data_text_color">#000000</color>
+    <color name="card_title_text_color">#000000</color>
 </resources>
