--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,28 +5,29 @@
     <integer name="max_length_servings">2</integer>
     <integer name="max_length_cook_time">3</integer>
     <!-- Text sizes. -->
-    <dimen name="edit_recipe_texts">14sp</dimen>
-    <dimen name="spinner_headers">12sp</dimen>
+    <dimen name="edit_recipe_text_size">14sp</dimen>
+    <dimen name="spinner_headers_text_size">12sp</dimen>
+    <dimen name="data_labels_text_size">16sp</dimen>
+    <dimen name="data_texts_text_size">16sp</dimen>
+    <dimen name="card_title_text_size">16sp</dimen>
     <!-- Spaces. -->
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="text_margin">16dp</dimen>
     <dimen name="space_half_unit">4dp</dimen>
     <dimen name="space_one_unit">8dp</dimen>
     <dimen name="space_two_units">16dp</dimen>
     <dimen name="empty_frame_outline_thickness">2dp</dimen>
     <!-- Widget sizes. -->
     <dimen name="nav_header_height">176dp</dimen>
-    <dimen name="app_bar_height">300dp</dimen>
+    <dimen name="app_bar_height">360dp</dimen>
     <dimen name="nav_header_user_image_size">72dp</dimen>
     <dimen name="nav_header_user_image_corner">36dp</dimen>
     <dimen name="card_width">235dp</dimen>
     <dimen name="card_height">315dp</dimen>
     <dimen name="card_image_height">200dp</dimen>
     <dimen name="edit_image_size">250dp</dimen>
-    <dimen name="card_title_size">16sp</dimen>
     <dimen name="card_detail_size">13sp</dimen>
     <dimen name="card_timer_icon_size">20dp</dimen>
     <dimen name="list_item_height">60dp</dimen>
@@ -35,4 +36,8 @@
     <dimen name="tab_widget_child_width">50dp</dimen>
     <dimen name="spinner_width">170dp</dimen>
     <dimen name="recipe_overall_divider_length">200dp</dimen>
+    <dimen name="quarter_width">80dp</dimen>
+    <dimen name="recipe_detail_top_padding">32dp</dimen>
+    <dimen name="recipe_detail_button_widths">256dp</dimen>
+    <dimen name="recipe_detail_button_heights">48dp</dimen>
 </resources>
