--- a/app/src/main/res/layout/fragment_overall.xml
+++ b/app/src/main/res/layout/fragment_overall.xml
@@ -94,6 +94,15 @@
                     app:layout_constraintBottom_toTopOf="@id/btn_rotate"
                     app:layout_constraintStart_toStartOf="@+id/btn_rotate" />
 
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    android:layout_width="@dimen/list_button_size"
+                    android:layout_height="@dimen/list_button_size"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toTopOf="@id/btn_rotate"
+                    app:layout_constraintStart_toStartOf="@+id/btn_rotate" />
+
             </android.support.constraint.ConstraintLayout>
         </LinearLayout>
 
